# independent-cascade-diffusion-with-claude-mcp-connector

./: README.md
network-diffusion/data/diffusion_stats/: network_data.json
network-diffusion/src/diffusion/: fb_ego_diffusion.py  fb_ego_diffusion_with_node_timesteps.py
network-diffusion/src/mcp/: cascade_dynamics.py  network_centrality.py  pyproject.toml
