[project]
name = "network_centrality"
version = "0.1.0"
description = "network centrality measures and cascade dynamics"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.25.0",
    "networkx>=3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"